# voice-typer

./: .gitignore  README.md
.github/workflows/: macos.yml  server.yml
voice-typer-rs/: .gitattributes  .gitignore  Cargo.toml  DEPLOY-MAC.md  README-FOR-MAC.md  bench.py  build.rs  installer.iss
voice-typer-rs/bundle/: Info.plist  entitlements.plist  make-app.sh  make-dmg.sh
voice-typer-rs/src/: audio.rs  config.rs  deepgram.rs  logging.rs  main.rs  streaming.rs  tray.rs
voice-typer-rs/src/platform_mac/: hotkey.rs  overlay.rs  paste.rs  popup.rs  render.rs  settings.rs
voice-typer-rs/src/platform_win/: hotkey.rs  overlay.rs  paste.rs  popup.rs  render.rs  settings.rs
voice-typer-server/: .env.example  .gitignore  Cargo.toml  DEPLOY.md  cloudflared.example.yml
voice-typer-server/deploy/: env.example  voice-typer-server.service
voice-typer-server/landing/: index.html  robots.txt  sitemap.xml
voice-typer-server/migrations/: 0001_init.sql  0002_billing.sql  0003_email_verify.sql
voice-typer-server/src/: config.rs  email.rs  error.rs  fallback.html  main.rs  rate_limit.rs
voice-typer-server/src/auth/: mod.rs  password.rs  routes.rs  session.rs
voice-typer-server/src/billing/: mod.rs  routes.rs
voice-typer-server/src/db/: mod.rs  models.rs
voice-typer-server/src/proxy/: mod.rs  routes.rs  session_lock.rs
voice-typer-server/src/web/: admin.rs  auth.rs  dashboard.rs  downloads.rs  landing.rs  mod.rs
