[package]
name = "voice-typer-server"
version = "0.1.0"
edition = "2021"
description = "Auth + Deepgram proxy for Voice Typer clients."

[[bin]]
name = "voice-typer-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tower-http = { version = "0.6", features = ["trace", "fs", "cors", "set-header"] }
tower = "0.5"
hyper = "1"

sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "chrono", "migrate"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

argon2 = "0.5"
rand = "0.8"
base32 = "0.5"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures-util = "0.3"
bytes = "1"

chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dotenvy = "0.15"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
